styles.css
html {
  font-family: 'Times New Roman', Times, serif;
  font-size: 62.5%;
}

p, ul, ol, dl {
  font-size: 1.6rem;
  line-height: 1.8rem;
  margin-bottom: 12px;
}

article {
  max-width: 620px;
  margin-right: auto;
  margin-left: auto;
}

h1, h2, h3, h4 {
  font-family: "Ubuntu", serif;
}

h1 {
  font-size: 3rem;
  line-height: 4.5rem;
}

h2 {
  font-size: 2.7rem;
  line-height: 3.2rem;
}

h3 {
  font-size: 2rem;
  line-height: 2.7rem;
}

h4 {
  font-size: 1.75rem;
  line-height: 2rem;
}

.byline, figcaption {
  font-family: Arial, Helvetica, sans-serif;

}

span{
  font-style: italic;
}

figcaption {
  font-size: 16px;
  float: right;
  margin-left: 250px;
  margin-bottom: 20px;
}

article p {
  clear:both;
}

blockquote {
  border-left: grey solid 4px;
  margin-left: 30px;
  padding-left: 20px;
}


ol {
  list-style-position: inside;
}

#comments {
  background-color: #ccc;
  padding: 12px;
}

